unpackaged/main/default/objects/Pagare_Ant__c/Pagare_Ant__c.object-meta.xml
<CustomObject>
    <label>Pagare</label>
    <nameField>
        <displayFormat>PG-{0000000}</displayFormat>
        <label>Pagare Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>