unpackaged/main/default/objects/Pagare_Ant__c/fields/AplicadoFactura__c.field-meta.xml
<CustomField>
    <fullName>AplicadoFactura__c</fullName>
    <label>Aplicado de Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>