unpackaged/main/default/objects/Pagare_Ant__c/fields/Asesor_de_Cobranza__c.field-meta.xml
<CustomField>
    <fullName>Asesor_de_Cobranza__c</fullName>
    <formula>Proceso_ATC__r.Asesor_de_Cobranza__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asesor de Cobranza</label>
    <type>Text</type>
</CustomField>