unpackaged/main/default/objects/Pagare_Ant__c/fields/BV__c.field-meta.xml
<CustomField>
    <fullName>BV__c</fullName>
    <formula>IF(DV__c &gt; 60, &#39;60+&#39;, 
		IF(DV__c &gt; 29, &#39;30-60&#39;,
				IF(DV__c &gt; 0, &#39;0-30&#39;, &#39;&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bloque de Vencimiento</label>
    <type>Text</type>
</CustomField>