unpackaged/main/default/objects/Pagare_Ant__c/fields/DV__c.field-meta.xml
<CustomField>
    <fullName>DV__c</fullName>
    <formula>IF( Saldo__c &gt; 1 &amp;&amp; VP__c &lt; TODAY(), TODAY() -  VP__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de Vencimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>