unpackaged/main/default/objects/Pagare_Ant__c/fields/EstadoDocumento__c.field-meta.xml
<CustomField>
    <fullName>EstadoDocumento__c</fullName>
    <label>Estado de Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>