unpackaged/main/default/objects/Pagare_Ant__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>