unpackaged/main/default/objects/Pagare_Ant__c/fields/Fecha_de_Pago_FX__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Pago_FX__c</fullName>
    <formula>DATE(VALUE(RIGHT(FechaPago__c, 4)), VALUE(MID(FechaPago__c, 4, 2)), VALUE(LEFT(FechaPago__c, 2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Pago (FX)</label>
    <type>Date</type>
</CustomField>