unpackaged/main/default/objects/Pagare_Ant__c/fields/FechaPagare__c.field-meta.xml
<CustomField>
    <fullName>FechaPagare__c</fullName>
    <label>Fecha de Pagaré</label>
    <length>255</length>
    <type>Text</type>
</CustomField>