unpackaged/main/default/objects/Pagare_Ant__c/fields/FechaPagare_FX__c.field-meta.xml
<CustomField>
    <fullName>FechaPagare_FX__c</fullName>
    <formula>DATE(VALUE(RIGHT(FechaPagare__c, 4)), VALUE(MID(FechaPagare__c, 4, 2)), VALUE(LEFT(FechaPagare__c, 2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Pagaré (FX)</label>
    <type>Date</type>
</CustomField>