unpackaged/main/default/objects/Pagare_Ant__c/fields/FechaPago__c.field-meta.xml
<CustomField>
    <fullName>FechaPago__c</fullName>
    <label>Fecha de Pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>