unpackaged/main/default/objects/Pagare_Ant__c/fields/ImporteAplicado__c.field-meta.xml
<CustomField>
    <fullName>ImporteAplicado__c</fullName>
    <label>Importe Aplicado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>