unpackaged/main/default/objects/Pagare_Ant__c/fields/ImportePago__c.field-meta.xml
<CustomField>
    <fullName>ImportePago__c</fullName>
    <label>Importe de Pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>