unpackaged/main/default/objects/Pagare_Ant__c/fields/IsVisible__c.field-meta.xml
<CustomField>
    <fullName>IsVisible__c</fullName>
    <formula>Asesor_de_Cobranza__c ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVisible</label>
    <type>Checkbox</type>
</CustomField>