unpackaged/main/default/objects/Pagare_Ant__c/fields/NumPagare__c.field-meta.xml
<CustomField>
    <fullName>NumPagare__c</fullName>
    <externalId>true</externalId>
    <label>Número de Pagaré</label>
    <length>255</length>
    <type>Text</type>
</CustomField>