unpackaged/main/default/objects/Pagare_Ant__c/fields/Proceso_ATC__c.field-meta.xml
<CustomField>
    <fullName>Proceso_ATC__c</fullName>
    <label>Proceso ATC</label>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Pagares</relationshipLabel>
    <relationshipName>Pagares</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>