unpackaged/main/default/objects/Pagare_Ant__c/fields/SaldoVencido__c.field-meta.xml
<CustomField>
    <fullName>SaldoVencido__c</fullName>
    <label>Saldo Vencido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>