unpackaged/main/default/objects/Pagare_Ant__c/fields/TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumento__c</fullName>
    <label>Tipo de Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>