unpackaged/main/default/objects/Pagare_Ant__c/fields/TipoPagare__c.field-meta.xml
<CustomField>
    <fullName>TipoPagare__c</fullName>
    <label>Tipo de Pagare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>