unpackaged/main/default/objects/Pagare_Ant__c/fields/TipoPago__c.field-meta.xml
<CustomField>
    <fullName>TipoPago__c</fullName>
    <label>Tipo de Pago (Mas Reciente)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>