unpackaged/main/default/objects/Pagare_Ant__c/fields/UltimaActualizacion__c.field-meta.xml
<CustomField>
    <fullName>UltimaActualizacion__c</fullName>
    <label>Ultima Actualizacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>