unpackaged/main/default/objects/Pagare_Ant__c/fields/UltimaActualizacion_FX__c.field-meta.xml
<CustomField>
    <fullName>UltimaActualizacion_FX__c</fullName>
    <formula>DATE(VALUE(RIGHT(UltimaActualizacion__c, 4)), VALUE(MID(UltimaActualizacion__c, 4, 2)), VALUE(LEFT(UltimaActualizacion__c, 2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultima Actualizacion (FX)</label>
    <type>Date</type>
</CustomField>