unpackaged/main/default/objects/Pagare_Ant__c/fields/Vencido__c.field-meta.xml
<CustomField>
    <fullName>Vencido__c</fullName>
    <formula>TODAY() &gt;  VP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencido</label>
    <type>Checkbox</type>
</CustomField>