unpackaged/main/default/objects/Pagare_Ant__c/fields/VencimientoPagare__c.field-meta.xml
<CustomField>
    <fullName>VencimientoPagare__c</fullName>
    <label>Vencimiento de Pagaré</label>
    <length>255</length>
    <type>Text</type>
</CustomField>