unpackaged/main/default/objects/Pagare_Ant__c/fields/VP__c.field-meta.xml
<CustomField>
    <fullName>VP__c</fullName>
    <formula>DATE(VALUE(RIGHT(VencimientoPagare__c, 4)), VALUE(MID(VencimientoPagare__c, 4, 2)), VALUE(LEFT(VencimientoPagare__c, 2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencimiento de Pagaré (FX)</label>
    <type>Date</type>
</CustomField>