unpackaged/main/default/objects/Pagare_Ant__c/listViews/Mis_Pagares.listView-meta.xml
<ListView>
    <fullName>Mis_Pagares</fullName>
    <columns>NAME</columns>
    <columns>Proceso_ATC__c</columns>
    <columns>AplicadoFactura__c</columns>
    <columns>TipoPagare__c</columns>
    <columns>TipoDocumento__c</columns>
    <columns>FechaPagare_FX__c</columns>
    <columns>VP__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsVisible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Mis Pagares</label>
</ListView>